Spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   min-height: 100%;
   position: relative;
   padding-top: 170px;
+  padding-bottom: 20px;
 }
 @media (min-width: 901px) {
   .page-container {
@@ -32,7 +33,7 @@ body {
 }
 @media (max-width: 900px) {
   .page-container {
-    padding-bottom: 65px;
+    padding-bottom: 85px;
   }
 }
 @media (max-width: 540px) {
@@ -42,7 +43,7 @@ body {
 }
 @media (max-width: 400px) {
   .page-container {
-    padding-bottom: 50px;
+    padding-bottom: 65px;
   }
 }
 
